# esp32-cpp-boilerplate

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
components/: README.md
components/absl/: CMakeLists.txt
main/: CMakeLists.txt  app_main.cpp
main/common/: isr_yielder.hpp  macros.hpp  task.hpp  utils.hpp
main/example/: hello.cpp  hello.hpp
